# testbench-defect-service

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap.py  build_binary.py  build_readme.py  download_dependencies.py  pyproject.toml  testbench-defect-service.spec
docs/: cli.md  configuration.md  intro.md
docs/clients/: custom-client.md  jira-client.md  jsonl-client.md
docs/getting-started/: installation.md
examples/jsonl/: UserDefinedAttributes.json
examples/jsonl/car_configurator/: UserDefinedAttributes.json  defects.jsonl
src/testbench_defect_service/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  log.py  middleware.py  openapi.yaml  routes.py
src/testbench_defect_service/clients/: __init__.py  abstract_client.py  utils.py
src/testbench_defect_service/clients/jira/: client.py  config.py  defect_mapping_service.py  html_to_jira.py  jira_client.py  render_utils.py  utils.py
src/testbench_defect_service/clients/jsonl/: client.py  config.py  utils.py
src/testbench_defect_service/models/: config.py  defects.py  logging.py
src/testbench_defect_service/utils/: auth.py  config.py  config_wizard.py  dependencies.py  import_utils.py
tests/robot/resources/: APIKeywords.py  Comparators.resource  Teardown.robot  service_setup.robot  variables.resource
tests/robot/tests/generic_test/: __init__.robot  test_auth.robot  test_routes.robot
tests/robot/tests/jira_project_specific_config_test/: __init__.robot  test_projects_config.robot
tests/robot/tests/jira_readonly_test/: __init__.robot  test_routes.robot
tests/robot/tests/jira_test/: __init__.robot  test_create_defect.robot  test_routes.robot  test_update_defect.robot
tests/unit/: README.md  __init__.py
tests/unit/clients/: __init__.py
tests/unit/clients/jira/: __init__.py  conftest.py  test_client.py  test_defect_mapping_service.py  test_html_to_jira.py  test_jira_client.py  test_utils.py
tests/unit/clients/jsonl/: test_jsonl_client.py  test_utils.py
